--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/Smpearth_logo.webp" />
+    <link rel="icon" type="image" href="/longcraft.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Long Craft</title>
   </head>
